<resources>
    <string name="app_name">T-Rex</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_start_sending">Start</string>
    <string name="insert_target_url">Insert target URL</string>
    <string name="pref_target_category">Target server</string>
    <string name="pref_targetUrl">Server URL</string>
    <string name="pref_targetUrl_summ">Insert URL of target server</string>
    <string name="pref_id">Device identifier</string>
    <string name="pref_id_summ">Insert user defined identifier (max 10 chars)</string>
    <string name="pref_targetUrl_def_value">http://kamil.svobodovi.net/track.php</string>
    <string name="button_stop_sending">Stop</string>
    <string name="textview_date">Date:</string>
    <string name="textview_lat">Latitude:</string>
    <string name="textview_lon">Longitude:</string>
    <string name="textview_alt">Altitude:</string>
    <string name="textview_speed">Speed:</string>
    <string name="textview_bearing">Bearing:</string>
    <string name="pref_location_category">Localization settings</string>
    <string name="pref_strategy">Localization strategy</string>
    <string name="pref_strategy_sum">Accuracy and localization strategy</string>
    <string name="pref_frequency">Frequency of localization (sec)</string>
    <string name="pref_frequency_summ">Frequency of localization in seconds</string>
    <string name="pref_min_dist">Distance evoking sending (m)</string>
    <string name="pref_min_dist_summ">Distance between positions, evoking sending position to server (in meters)</string>
    <string name="pref_max_interval">Frequency of sending (sec)</string>
    <string name="pref_max_interval_sum">Maximal time of sending new position to server (in seconds) - should be equal to or longer then localization frequency</string>
    <string name="textview_http_response_title">Server response:</string>
    <string name="pref_device">Device settings</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_keep_screen_on_summ">Keep screen on during localization</string>
    <string name="pref_keep_cpu_on">Keep CPU on</string>
    <string name="pref_keep_cpu_on_summ">Keep localization even if screen is off</string>
    <string name="localiz_run">Localization is running</string>
    <string name="localiz_not_run">Localization is not running</string>
    <string name="localiz_started">Localization started</string>
    <string name="localiz_could_not_start">Could not start localization service</string>
    <string name="localiz_stopped">Localization stopped</string>
    <string name="notif_title">T-Rex localization is running</string>
    <string name="notif_text">Touch to show application</string>
</resources>
